# FinanceDataHub

./: .env.example  .gitignore  ARCHIVE_OPERATION_SUMMARY.md  BUGFIX_SUMMARY.md  CHANGE_COMPLETION_REPORT.md  CLAUDE.md  DELIVERY_CHECKLIST.md  FINAL_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY_TRADE_DATE.md  INCREMENTAL_UPDATE_GUIDE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SQL_COMPATIBILITY_FIX.md  TASK_COMPLETION_CHECK.md  check_and_fix_db.py  demo_incremental_update.py  docker-compose.yml  fix_daily_basic.py  frequency_fix_summary.md  industry_config.json  pyproject.toml  schedules.yml  sources.yml  sources.yml.example  test_frequency_extraction.py
.claude/: settings.local.json
docs/: ADJ_FACTOR.md  FINAL_SUMMARY.md  QUICK_START.md  SDK_HELP.md
docs/features/: FINANCIAL_STATEMENTS.md  INCREMENTAL_UPDATE_LOGIC.md  ImprovePreprocessEfficiency.md  Phase3_Complete_Documentation.md  SUPPLEMENT_ADJ_FACTOR.md  SchedulerPreprocessing.md  TIMESCALEDB_OPTIMIZATION_REPORT.md  add_continuous_aggregates.md  cn_macro_cycle_preprocessing.md  distinct_industry_valuation.md  frequency_field_implementation_summary.md
docs/guides/: valueinvesting_macro_cycle_integration_guide.md
examples/: SIMPLE_USAGE.py  sdk_usage_example.py
finance_data_hub/: __init__.py  config.py  sdk.py
finance_data_hub/cli/: main.py  preprocess.py  schedule.py
finance_data_hub/database/: __init__.py  cleanup_db.py  init_db.py  manager.py  operations.py
finance_data_hub/preprocessing/: __init__.py  adjust.py  pipeline.py  resample.py  storage.py
finance_data_hub/providers/: __init__.py  base.py  registry.py  schema.py  tushare.py  xtquant.py
finance_data_hub/router/: __init__.py  smart_router.py
finance_data_hub/scheduler/: __init__.py  engine.py  executor.py  manager.py  models.py
finance_data_hub/update/: __init__.py  updater.py
openspec/: project.md
openspec/specs/cli-architecture/: spec.md
scripts/: cleanup_duplicate_klines.sql  validate_aggregates.py
sql/init/: 001_create_extensions.sql  002_create_tables.sql  003_create_hypertables.sql  004_create_adj_factor_old.sql  004_create_views_and_functions.sql  005_create_functions.sql  006_create_continuous_aggregates.sql  007_create_preprocess_tables.sql
sql/migrate/: fix_daily_basic_unique_constraint.sql
sql/migrations/: 001_add_frequency_to_symbol_minute.sql  001_fix_daily_basic_precision.sql  002_remove_adj_field.sql  003_add_ann_date_time_columns.sql  003_remove_unused_fields.sql  004_expand_change_pct_precision.sql  005_simplify_technical_indicators.sql  008_create_quarterly_fundamental.sql  009_add_roe_yearly.sql  010_add_roa_ttm.sql  011_add_fina_indicator_missing_fields.sql  012_widen_fina_indicator_precision.sql  013_add_quarterly_ttm_fields.sql  014_add_dv_ttm_to_valuation.sql  015_add_last_adj_factor.sql  016_widen_valuation_precision.sql  017_add_fscore_exemptions_to_industry_valuation.sql  017_check_f_ann_date.sql  017_fix_f_ann_date_null.sql  017_fix_source_tables_timezone.sql  017_fix_timezone.sql  017_fix_timezone_cleanup.sql  018_add_cn_macro_cycle_preprocess_tables.sql  019_add_index_daily.sql  020_add_nda_and_buffett_features.sql  run_migration.py
tests/: conftest.py
tests/integration/: test_continuous_aggregates.py  test_query_performance.py  test_sdk_queries.py  test_smart_router_integration.py
tests/unit/: test_cli.py  test_config.py  test_fscore_roa_ttm.py  test_higher_period_queries.py  test_macro_cycle_preprocessing.py  test_preprocessing.py  test_scheduler.py
xtquant_helper/core/: api_client_example.py  api_service.py
xtquant_helper/docs/: qmt_api.md
(+49 files in other folders)
